Text align left for font-awesome to avoid position flicker

--- a/assets/less/custom-checkbox.less
+++ b/assets/less/custom-checkbox.less
@@ -12,6 +12,7 @@
     i {
         font-size: 24px;
         min-width: 24px; //Avoid pushing text because checked icon is bigger
+        text-align: left;
     }
 
     &.disabled, &.disabled-checked {
